--- a/index.html
+++ b/index.html
@@ -1,20 +1,16 @@
-</head><body>
-<title>Evan Bhandari</title>
-
-
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Evan Bhandari</title>
+</head>
 <body>
-<iframe src="https://evanbhandari.wixsite.com/portfolio" style="position:fixed; top:-50px; left:0px; bottom:0px; right:0px; width:100%; height:105%; border:none; margin:0; padding:0; overflow:hidden; z-index:999999;">
-</iframe>  
-
-</body>
-
+    <a href="https://www.example.com"><img src="LogoWeb.png" alt="Logo" title="Title text"></a>
+    <iframe src="https://evanbhandari.wixsite.com/portfolio" style="position:fixed; top:-50px; left:0px; bottom:0px; right:0px; width:100%; height:105%; border:none; margin:0; padding:0; overflow:hidden; z-index:999999;">
+    </iframe>  
     <script type="text/javascript">
-<!--
-if (screen.width <= 900) {
-document.location = "/Mobile.html";
-}
-//-->
-</script>
-
-
-</body></html>
+        if (screen.width <= 900) {
+            document.location = "/Mobile.html";
+        }
+    </script>
+</body>
+</html>
