--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Evan Bhandari</title>
 </head>
 <body>
-    <a href="https://www.evanbhandari.com.np"><img src="LogoWeb.jpg" alt="Logo" title="Title text"></a>
+    <a href="https://www.evanbhandari.com.np"><img src="LogoWeb.png" alt="Logo" title="Title text"></a>
     <iframe src="https://evanbhandari.wixsite.com/portfolio" style="position:fixed; top:-50px; left:0px; bottom:0px; right:0px; width:100%; height:105%; border:none; margin:0; padding:0; overflow:hidden; z-index:999999;">
     </iframe>  
     <script type="text/javascript">
