--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Evan Bhandari</title>
+    	<meta property="og:image" content="/LogoWeb.png">
 </head>
 <body>
     <iframe src="https://evanbhandari.wixsite.com/portfolio" style="position:fixed; top:-50px; left:0px; bottom:0px; right:0px; width:100%; height:105%; border:none; margin:0; padding:0; overflow:hidden; z-index:999999;">
