--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 <body>
 	<div class="container">
 		<h1>Under Construction</h1>
-		<img src="IMG_9520.JPG" alt="Under Construction">
+		<img src="pepefrg-4.gif" alt="Pepe Dance">
 		<p>Currently working on something wonderful. Stay tuned!</p>
 		<p>Contact Me: <a href="mailto:bhandari.nirwan06@gmail.com">bhandari.nirwan06@gmail.com</a></p>
 		</div>
