--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="index-style.css" />
     <link rel="icon" href="LogoWeb .ico" type="image/x-icon">
     <video autoplay muted loop id="myVideo">
-      <source src="RingLoopedFinal.mp4" type="video/mp4">
+      <source src="HomeBG.mp4" type="video/mp4">
     </video>
   </head>
   <body>
