--- a/contact.html
+++ b/contact.html
@@ -26,8 +26,8 @@
 			<li><a href="contact.html"class = "active">Contact Me</a></li>
 		</ul>
 	</nav>
-
-	<form method="post" action="sendmail.php">
+	<form action="https://formspree.io/f/xqkonnzk"
+	method="POST">
 		<h2>Contact Me</h2>
 		
 		<label for="name">Name</label>
@@ -45,5 +45,4 @@
 		<input type="submit" value="Send">
 	</form>
 </body>
-
 </html>
