--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
 	</nav>
 	<div class="about">
 		<h2>Evan Bhandari</h2>
-		<p>Kathmandu, Nepal.</p>
+		<p>Kathmandu, Nepal.</p> <img src="me.jpg" alt="Evan Bhandari" height="500">
 		<p>My name is Evan Bhandari and I'm a computer science student with a passion for expanding my knowledge of technology and making a positive impact in the industry.</p>
 		<h3>Education</h3>
 		<ul>
