--- a/contact.html
+++ b/contact.html
@@ -46,11 +46,12 @@
 		<input type="submit" value="Send">
 	</form>
 
-	<footer>
-		<a href="https://github.com/evanbh256"><img src="SocialMedia/GH.png" alt="Github" class="social-icon"></a>
-		<a href="https://www.instagram.com/evan_256"><img src="SocialMedia/IG.png" alt="Instagram" class="social-icon"></a>
-		<a href="https://twitter.com/Nave_256"><img src="SocialMedia/TT.png" alt="Twitter" class="social-icon"></a>
-		<a href="https://www.linkedin.com/in/evan-bhandari-aa7b19218/"><img src="SocialMedia/LN.png" alt="LinkedIn" class="social-icon"></a>
-	</footer>
+<footer>
+    <a href="https://github.com/evanbh256" target="_blank"><img src="SocialMedia/GH.png" alt="Github" class="social-icon"></a>
+    <a href="https://www.instagram.com/evan_256" target="_blank"><img src="SocialMedia/IG.png" alt="Instagram" class="social-icon"></a>
+    <a href="https://twitter.com/Nave_256" target="_blank"><img src="SocialMedia/TT.png" alt="Twitter" class="social-icon"></a>
+    <a href="https://www.linkedin.com/in/evan-bhandari-aa7b19218/" target="_blank"><img src="SocialMedia/LN.png" alt="LinkedIn" class="social-icon"></a>
+</footer>
+
 </body>
 </html>
