--- a/about.html
+++ b/about.html
@@ -44,7 +44,6 @@
 				<li>Comfortable working with social media content creation and publication</li>
 				<li>Strong Leadership, Organizational, Communication, and Instructional Skills</li>
 			</ul>
-
 			<h3>Activities and Achievements</h3>
 			<ul>
 			<li>Core Logistics Member for the RBS MUN 2022</li>
@@ -52,6 +51,9 @@
 			<li>Chair of RBS Theatre Club</li>
 			<li>Achieved the Outstanding Delegate Award in the KVMUN 2020 as the Delegate of the United Kingdom</li>
 			<li>Participated in BMUN 2018 and KVMUN 2019</li></ul>
-	</div
-
+	</div>
+</body>
+<footer style="text-align: center;">
+    <p>&copy; Evan Bhandari, 2023</p>
+</footer>
 </html>
