--- a/index.html
+++ b/index.html
@@ -40,4 +40,7 @@
       </nav>
     </main>
   </body>
+<footer style="text-align: center;">
+  <p>&copy; Evan Bhandari, 2023</p>
+</footer>
 </html>
