--- a/projects.html
+++ b/projects.html
@@ -41,4 +41,7 @@
     <p  class = "later">I will be adding more projects soon.</p>
   </div>
 </body>
+<footer style="text-align: center;">
+  <p>&copy; Evan Bhandari, 2023</p>
+</footer>
 </html>
