--- a/contact.html
+++ b/contact.html
@@ -52,6 +52,8 @@
     <a href="https://twitter.com/Nave_256" target="_blank"><img src="SocialMedia/TT.png" alt="Twitter" class="social-icon"></a>
     <a href="https://www.linkedin.com/in/evan-bhandari-aa7b19218/" target="_blank"><img src="SocialMedia/LN.png" alt="LinkedIn" class="social-icon"></a>
 </footer>
-
 </body>
+<footer style="text-align: center;">
+    <p>&copy; Evan Bhandari, 2023</p>
+</footer>
 </html>
