--- a/about.html
+++ b/about.html
@@ -27,8 +27,8 @@
 	</nav>
 	<div class="about">
 		<h2>Evan Bhandari</h2>
-		<p>Kathmandu, Nepal.</p>
-		<p>My name is Evan Bhandari and I'm a computer science student with a passion for expanding my knowledge of technology and making a positive impact in the industry.</p>
+		<p>Kathmandu, Nepal.</p> <img src="me.jpg" alt="Evan Bhandari" height="500">
+		<p>My name is Evan Bhandari and I'm a computer science student with a passion for expanding my knowledge of technology, through curiosity and seld motivation.</p>
 		<h3>Education</h3>
 		<ul>
 			<li>Primary and Secondary School: Kaasthamandap Vidhyalya, Nepal. </li>
