--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,8 @@
 		</ul>
 	</nav>
 
-	<form method="post" action="sendmail.php">
+	<form action="https://formspree.io/f/xqkonnzk"
+	method="POST">
 		<h2>Contact Me</h2>
 		
 		<label for="name">Name</label>
@@ -44,6 +45,12 @@
 
 		<input type="submit" value="Send">
 	</form>
-</body>
 
+	<footer>
+		<a href="https://github.com/evanbh256"><img src="SocialMedia/GH.png" alt="Github" class="social-icon"></a>
+		<a href="https://www.instagram.com/evan_256"><img src="SocialMedia/IG.png" alt="Instagram" class="social-icon"></a>
+		<a href="https://twitter.com/Nave_256"><img src="SocialMedia/TT.png" alt="Twitter" class="social-icon"></a>
+		<a href="https://www.linkedin.com/in/evan-bhandari-aa7b19218/"><img src="SocialMedia/LN.png" alt="LinkedIn" class="social-icon"></a>
+	</footer>
+</body>
 </html>
