--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <span style="color: #E4FF99; font-family: Helvicta Bold, sans-serif; font-size: 80px;">Bhandari</span>
           </h1>
       <div class="description">
-        <p>A computer science enthusiast with curiosity and relentless self motivation, with an interestin the IT Field looking to actively develop and broaden my skills and knowledge while gaining experience through projects and challenging myself.</p>
+        <p>A computer science enthusiast with curiosity and relentless self-motivation, with an interest in the IT Field looking to actively develop and broaden my skills and knowledge while gaining experience through projects and challenging myself.</p>
       </div
       <nav>
         <ul class="menu">
