added meta tags

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta property="og:description" content="I'm Evan Bhandari, and this is my portfolio website where I showcase my programming projects and provide my resume.">
     <meta property="og:image" content="WebDis.png">
-  <meta name="keywords" content="Evan, Evan Bhandari, Computer Science, Portfolio, Evan_256, Nave_256">
+  <meta name="keywords" content="Evan, Evan Bhandari, Computer Science, Portfolio, Evan_256, Nave_256, EvanBh256, Bhandari">
   <meta name="author" content="Evan Bhandari">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta property="og:title" content="Evan Bhandari">
-  <meta property="og:description" content="I'm Evan Bhandari, and this is my portfolio website where I showcase my programming projects and provide my resume.">
+  <meta name="description" content="I'm Evan Bhandari, and this is my portfolio website where I showcase my programming projects and provide my resume.">
   <meta property="og:image" content="WebDis.png">
   <meta property="og:url" content="https://evanbhandari.com.np">
   <meta property="og:type" content="website">
@@ -28,7 +28,7 @@
             <span style="color: #E4FF99; font-family: Helvicta Bold, sans-serif; font-size: 80px;">Bhandari</span>
           </h1>
       <div class="description">
-        <p>A computer science enthusiast with curiosity and relentless self-motivation, with an interest in the IT Field looking to actively develop and broaden my skills and knowledge while gaining experience through projects and challenging myself.</p>
+        <p>I am Evan Bhandari, a computer science enthusiast with curiosity and relentless self-motivation, with an interest in the IT Field looking to actively develop and broaden my skills and knowledge while gaining experience through projects and challenging myself, welcome to my portfolio website.</p>
       </div
       <nav>
         <ul class="menu">
