--- a/about.html
+++ b/about.html
@@ -8,11 +8,11 @@
 	<meta name="author" content="Evan Bhandari">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta property="og:title" content="Evan Bhandari">
-	<meta property="og:description" content="I'm Evan Bhandari, and this is my portfolio website where I showcase my programming projects and provide my resume.">
+	<meta name="description" content="I am Evan Bhandari, this is a page dedicated to my achievements and who I am. This page contains about me and my activities.">
 	<meta property="og:image" content="WebDis.png">
 	<meta property="og:url" content="https://evanbhandari.com.np">
 	<meta property="og:type" content="website">
-	<title>About Me</title>
+	<title>Evan Bhandari - About Me</title>
 	<link rel="stylesheet" href="about-style.css" />
     <link rel="icon" href="LogoWeb .ico" type="image/x-icon">
 	</head>
