--- a/projects.html
+++ b/projects.html
@@ -2,17 +2,16 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <meta property="og:description" content="I'm Evan Bhandari, and this is my portfolio website where I showcase my programming projects and provide my resume.">
-    <meta property="og:image" content="WebDis.png">
+  <meta property="og:image" content="WebDis.png">
   <meta name="keywords" content="Evan, Evan Bhandari, Computer Science, Portfolio, Evan_256, Nave_256">
   <meta name="author" content="Evan Bhandari">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta property="og:title" content="Evan Bhandari">
-  <meta property="og:description" content="I'm Evan Bhandari, and this is my portfolio website where I showcase my programming projects and provide my resume.">
+  <meta name="description" content="This is my projects page, this page showcases small projects I have worked on throughout the years. An archive of my progress.">
   <meta property="og:image" content="WebDis.png">
   <meta property="og:url" content="https://evanbhandari.com.np">
   <meta property="og:type" content="website">
-  <title>Projects</title>
+  <title>Evan Bhandari - Projects</title>
   <link rel="stylesheet" href="project-style.css" />
   <link rel="icon" href="LogoWeb.ico" type="image/x-icon">
 </head>
