--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta name="google-site-verification" content="q3LFKnBCiVRpLaxcgr10fWTiCwGYQn_aaXevsuZwOIk" />
     <meta charset="UTF-8">
     <meta property="og:description" content="I'm Evan Bhandari, and this is my portfolio website where I showcase my programming projects and provide my resume.">
     <meta property="og:image" content="WebDis.png">
