--- a/index.html
+++ b/index.html
@@ -24,24 +24,12 @@
   <body>
     <main style="text-align: center;">
           <h1>
-            <span style="color: #C4E7F0; font-family: Helvicta Bold, sans-serif; font-size: 80px;">Evan</span>
-            <br>
-            <span style="color: #E4FF99; font-family: Helvicta Bold, sans-serif; font-size: 80px;">Bhandari</span>
+            <span style="color: #C4E7F0; font-family: Helvicta Bold, sans-serif; font-size: 80px;">Under Construction</span>
           </h1>
-      <div class="description">
-        <p>I am Evan Bhandari, a computer science enthusiast with curiosity and relentless self-motivation, with an interest in the IT Field looking to actively develop and broaden my skills and knowledge while gaining experience through projects and challenging myself, welcome to my portfolio website.</p>
-      </div
-      <nav>
-        <ul class="menu">
-          <li><a href="index.html" class = "active">Home</a></li>
-          <li><a href="projects.html">Projects</a></li>
-          <li><a href="about.html">About Me</a></li>
-          <li><a href="contact.html">Contact Me</a></li>
-        </ul>
       </nav>
     </main>
   </body>
 <footer style="text-align: center;">
-  <p>&copy; Evan Bhandari, 2023</p>
+  <p>&copy; Evan Bhandari, 2024</p>
 </footer>
 </html>
