--- a/index.html
+++ b/index.html
@@ -1,35 +1,20 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta name="google-site-verification" content="q3LFKnBCiVRpLaxcgr10fWTiCwGYQn_aaXevsuZwOIk" />
-    <meta charset="UTF-8">
-    <meta property="og:description" content="I'm Evan Bhandari, and this is my portfolio website where I showcase my programming projects and provide my resume.">
-    <meta property="og:image" content="WebDis.png">
-  <meta name="keywords" content="Evan, Evan Bhandari, Computer Science, Portfolio, Evan_256, Nave_256, EvanBh256, Bhandari">
-  <meta name="author" content="Evan Bhandari">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta property="og:title" content="Evan Bhandari">
-  <meta name="description" content="I'm Evan Bhandari, and this is my portfolio website where I showcase my programming projects and provide my resume.">
-  <meta property="og:image" content="WebDis.png">
-  <meta property="og:url" content="https://evanbhandari.com.np">
-  <meta property="og:type" content="website">
-
+<head>
+    <meta charset="UTF-8" />
     <title>Evan Bhandari</title>
     <link rel="stylesheet" href="index-style.css" />
-    <link rel="icon" href="LogoWeb .ico" type="image/x-icon">
-    <video autoplay muted loop id="myVideo">
-      <source src="HomeBG.mp4" type="video/mp4">
-    </video>
-  </head>
-  <body>
-    <main style="text-align: center;">
-          <h1>
-            <span style="color: #C4E7F0; font-family: Helvicta Bold, sans-serif; font-size: 80px;">Under Construction</span>
-          </h1>
-      </nav>
-    </main>
-  </body>
-<footer style="text-align: center;">
-  <p>&copy; Evan Bhandari, 2024</p>
-</footer>
+</head>
+<body>
+    <div class="overlay"></div>
+<div class="stars" aria-hidden="true"></div>
+<div class="starts2" aria-hidden="true"></div>
+<div class="stars3" aria-hidden="true"></div>
+<main class="main">
+	<section class="contact">
+		<h1 class="title">Evan Bhandari</h1>
+		<h2 class="sub-title">Site Under Construction</h2>
+	</section>
+</main>
+</body>
 </html>
